# streamlit-rating-app

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
config/: config.yaml  page_texts.yaml  questionnaire_fields.yaml  rating_scales.yaml
pages/: consent.py  familiarization.py  login.py  post_familiarization.py  pre_familiarization.py  questionnaire.py  videoplayer.py  welcome.py
utils/: config_loader.py  data_persistence.py  device_detection.py  gdrive_manager.py  gsheets_manager.py  navigation.py  video_rating_display.py
