[project]
name = "4-streamlit-rating-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.4.4",
    "google-api-python-client>=2.190.0",
    "gspread>=5.0.0,<6",
    "matplotlib>=3.10.8",
    "mplsoccer>=1.6.1",
    "numpy<2",
    "pandas>=1.3.0,<2",
    "pyyaml>=6.0.3",
    "st-gsheets-connection>=0.0.3",
    "streamlit>=1.54.0",
    "streamlit-js-eval>=1.0.0",
    "user-agents>=2.2.0",
]
